--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "avadim/fast-excel-writer": "^5.8",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
+        "phpoffice/phpspreadsheet": "^2.2",
         "yajra/laravel-datatables-oracle": "^11.0"
     },
     "require-dev": {
